adding others endpoint and first tests
